<resources>
    <string name="app_name">Basketball Scoring App</string>
    <string name="blue_team">Blue Team</string>
    <string name="read_team">Read Team</string>
    <string name="team_1">Team 1</string>
    <string name="enter_the_team_name">Enter The Team Name</string>
    <string name="team_2">Team 2</string>
    <string name="team_red">Team Red</string>
    <string name="score">0</string>
    <string name="_3_point">+3 Point</string>
    <string name="_2_point">+2 Point</string>
    <string name="free_throw">Free Throw</string>
    <string name="share">Share</string>
</resources>
